# Tree_practics

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ListLogic.h  README.md  REFLECTION.md  bstContains.c  bstFree.c  bstInorder.c  bstInsert.c  bstPostorder.c  main.c
.github/: dependabot.yml
.github/workflows/: build-and-lint.yml
Task_A/: CMakeLists.txt  REFLECTION.md
Task_A/src/: bstFree.c  bstInorder.c  bstInsert.c  main.c
Task_B/src/: bstPostorder.c
src/: ListLogic.h  bst.c  bst.h  bstContains.c  bstDelete.c  bstHeight.c  bstInsert.c  bstIsValid.c  bstKthMin.c  bstMax.c  bstMerge.c  bstMin.c  bstPreorder.c  bstSize.c  iterator.c  main.c
